--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,4 +13,15 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </GlobalPackageReference>
     </ItemGroup>
+    <ItemGroup>
+        <!-- Central package versions -->
+        <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2"/>
+        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.0.0"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.1"/>
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.13.1"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.13.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.13.0"/>
+    </ItemGroup>
 </Project>
