--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,13 +15,17 @@
     </ItemGroup>
     <ItemGroup>
         <!-- Central package versions -->
+        <PackageVersion Include="Aspire.Hosting" Version="13.1.0-preview.1.25570.2"/>
+        <PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0-preview.1.25570.1"/>
+        <PackageVersion Include="Aspire.Hosting.Keycloak" Version="13.1.0-preview.1.25570.1"/>
+        <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25570.1"/>
         <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.0.0"/>
         <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.0.0"/>
-        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.13.1"/>
-        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.13.1"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.13.0"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.13.0"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.13.0"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0"/>
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0"/>
     </ItemGroup>
 </Project>
