feat(apphost): integrate OpenTelemetry Collector and gateway routing
- Register OTLP collector resource and route gateway telemetry to it
- Add Keycloak identity resource and YARP gateway with route identity/{**catch-all}
- Set persistent lifetimes for long-lived containers
- Update AppHost project references:
  - Add dependency on Hosting.OpenTelemetryCollector project
  - Add package refs: Aspire.Hosting.AppHost, Aspire.Hosting.Keycloak, Aspire.Hosting.Yarp

--- a/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
+++ b/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
@@ -5,4 +5,14 @@
         <UserSecretsId>a59ae261-d2dd-4d64-b476-887398eaa756</UserSecretsId>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Aspire.Hosting.AppHost"/>
+        <PackageReference Include="Aspire.Hosting.Keycloak"/>
+        <PackageReference Include="Aspire.Hosting.Yarp"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\ZeroTrustOAuth.Hosting.OpenTelemetryCollector\ZeroTrustOAuth.Hosting.OpenTelemetryCollector.csproj" IsAspireProjectResource="false"/>
+    </ItemGroup>
+
 </Project>
