feat(hosting-grafana): add Grafana resource support to hosting framework
- Introduce `GrafanaResource` for representing containerized Grafana instances.
- Add `GrafanaSettings` to enable resource-specific configurations like health checks.
- Implement `GrafanaExtensions` with methods to register Grafana resources.
- Define constants for Grafana container image tags in `GrafanaContainerImageTags`.
- Integrate Grafana into `AppHost` with a default instance.
- Update solution and project references to include the new `Hosting.Grafana` package.

--- a/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
+++ b/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\ZeroTrustOAuth.Hosting.Grafana\ZeroTrustOAuth.Hosting.Grafana.csproj" IsAspireProjectResource="false"/>
         <ProjectReference Include="..\ZeroTrustOAuth.Hosting.OpenTelemetryCollector\ZeroTrustOAuth.Hosting.OpenTelemetryCollector.csproj" IsAspireProjectResource="false"/>
     </ItemGroup>
 
