--- a/src/ZeroTrustOAuth.AppHost/Properties/launchSettings.json
+++ b/src/ZeroTrustOAuth.AppHost/Properties/launchSettings.json
@@ -11,8 +11,7 @@
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21074",
         "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22106",
-        "ASPIRE_DASHBOARD_MCP_ENDPOINT_URL": "http://localhost:23080",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
+        "ASPIRE_DASHBOARD_MCP_ENDPOINT_URL": "https://localhost:23080"
       }
     }
   }
