--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,14 +8,23 @@
     <PackageVersion Include="Aspire.Hosting" Version="13.1.0-preview.1.25570.1" />
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0-preview.1.25572.6" />
     <PackageVersion Include="Aspire.Hosting.Keycloak" Version="13.1.0-preview.1.25572.6" />
+    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0-preview.1.25572.6" />
     <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25572.6" />
+    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0-preview.1.25572.6" />
+    <PackageVersion Include="Carter" Version="8.2.1" />
     <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.0.0" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.0.0" />
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0" />
+    <PackageVersion Include="Scalar.Aspire" Version="0.7.4" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.11.0" />
   </ItemGroup>
 </Project>
