--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,7 +11,9 @@
     <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0-preview.1.25572.6" />
     <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25572.6" />
     <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0-preview.1.25572.6" />
-    <PackageVersion Include="Carter" Version="8.2.1" />
+    <PackageVersion Include="Carter" Version="10.0.0" />
+    <PackageVersion Include="ErrorOr" Version="2.1.0" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
