--- a/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
+++ b/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
@@ -8,6 +8,8 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
         <PackageReference Include="Carter" />
+        <PackageReference Include="ErrorOr" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
