Enable execCommand feature in Aspire settings

--- a/.aspire/settings.json
+++ b/.aspire/settings.json
@@ -1,3 +1,6 @@
 {
-  "appHostPath": "../src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj"
+  "appHostPath": "../src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj",
+  "features": {
+    "execCommandEnabled": "true"
+  }
 }
