--- a/src/ZeroTrustOAuth.Data/ZeroTrustOAuth.Data.csproj
+++ b/src/ZeroTrustOAuth.Data/ZeroTrustOAuth.Data.csproj
@@ -1,19 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting"/>
+    </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ZeroTrustOAuth.ServiceDefaults\ZeroTrustOAuth.ServiceDefaults.csproj"/>
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\ZeroTrustOAuth.ServiceDefaults\ZeroTrustOAuth.ServiceDefaults.csproj"/>
+    </ItemGroup>
 
 </Project>
