--- a/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
+++ b/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
@@ -6,19 +6,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
-        <PackageReference Include="Carter" />
-        <PackageReference Include="ErrorOr" />
-        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+        <PackageReference Include="Aspire.Keycloak.Authentication"/>
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL"/>
+        <PackageReference Include="Carter"/>
+        <PackageReference Include="ErrorOr"/>
+        <PackageReference Include="Facet"/>
+        <PackageReference Include="Facet.Extensions"/>
+        <PackageReference Include="Facet.Extensions.EFCore"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design"/>
+        <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ZeroTrustOAuth.ServiceDefaults\ZeroTrustOAuth.ServiceDefaults.csproj" />
-        <ProjectReference Include="..\ZeroTrustOAuth.Data\ZeroTrustOAuth.Data.csproj" />
+        <ProjectReference Include="..\ZeroTrustOAuth.ServiceDefaults\ZeroTrustOAuth.ServiceDefaults.csproj"/>
+        <ProjectReference Include="..\ZeroTrustOAuth.Data\ZeroTrustOAuth.Data.csproj"/>
     </ItemGroup>
 
 </Project>
