Remove `OpenApiDocumentsDirectory` property and update package references to streamline dependencies and align with updated library versions.

--- a/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
+++ b/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
@@ -8,19 +8,16 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Keycloak.Authentication"/>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL"/>
-        <PackageReference Include="Carter"/>
         <PackageReference Include="ErrorOr"/>
+        <PackageReference Include="FastEndpoints"/>
         <PackageReference Include="Facet"/>
         <PackageReference Include="Facet.Extensions"/>
         <PackageReference Include="Facet.Extensions.EFCore"/>
+        <PackageReference Include="FastEndpoints.Swagger"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design"/>
-        <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
     </ItemGroup>
 
