--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,11 +12,12 @@
         <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25572.6"/>
         <PackageVersion Include="Aspire.Keycloak.Authentication" Version="13.1.0-preview.1.25572.6"/>
         <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Carter" Version="10.0.0"/>
-        <PackageVersion Include="ErrorOr" Version="2.1.0"/>
-        <PackageVersion Include="Facet" Version="4.4.3"/>
-        <PackageVersion Include="Facet.Extensions" Version="4.4.3"/>
-        <PackageVersion Include="Facet.Extensions.EFCore" Version="4.4.3"/>
+        <PackageVersion Include="ErrorOr" Version="2.0.1"/>
+        <PackageVersion Include="FastEndpoints" Version="7.1.1"/>
+        <PackageVersion Include="Facet" Version="5.0.0"/>
+        <PackageVersion Include="Facet.Extensions" Version="5.0.0"/>
+        <PackageVersion Include="Facet.Extensions.EFCore" Version="5.0.0"/>
+        <PackageVersion Include="FastEndpoints.Swagger" Version="7.1.1"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0"/>
         <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2"/>
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
