--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,17 +5,22 @@
     </PropertyGroup>
     <ItemGroup>
         <!-- Central package versions -->
+        <PackageVersion Include="Ardalis.GuardClauses" Version="5.0.0"/>
+        <PackageVersion Include="Ardalis.Result.AspNetCore" Version="10.1.0"/>
+        <PackageVersion Include="Ardalis.Result.FluentValidation" Version="10.1.0"/>
+        <PackageVersion Include="Asp.Versioning.Http" Version="8.1.0"/>
         <PackageVersion Include="Aspire.Hosting" Version="13.1.0-preview.1.25570.1"/>
-        <PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Aspire.Hosting.Keycloak" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Aspire.Keycloak.Authentication" Version="13.1.0-preview.1.25572.6"/>
-        <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0-preview.1.25572.6"/>
+        <PackageVersion Include="Aspire.Hosting.AppHost" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="Aspire.Hosting.Keycloak" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="Aspire.Hosting.Yarp" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="Aspire.Keycloak.Authentication" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.0-preview.1.25574.12"/>
+        <PackageVersion Include="CommunityToolkit.Aspire.Hosting.Keycloak.Extensions" Version="13.0.0-preview.1.251125-0315"/>
         <PackageVersion Include="ErrorOr" Version="2.0.1"/>
         <PackageVersion Include="FastEndpoints" Version="7.1.1"/>
-        <PackageVersion Include="Facet" Version="5.0.0"/>
-        <PackageVersion Include="Facet.Extensions" Version="5.0.0"/>
+        <PackageVersion Include="Facet" Version="5.0.1"/>
+        <PackageVersion Include="Facet.Extensions" Version="5.0.1"/>
         <PackageVersion Include="Facet.Extensions.EFCore" Version="5.0.0"/>
         <PackageVersion Include="FastEndpoints.Swagger" Version="7.1.1"/>
         <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0"/>
@@ -37,5 +42,6 @@
         <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.14.0"/>
         <PackageVersion Include="Scalar.Aspire" Version="0.7.4"/>
         <PackageVersion Include="Scalar.AspNetCore" Version="2.11.0"/>
+        <PackageVersion Include="Ardalis.Result" Version="10.1.0"/>
     </ItemGroup>
 </Project>
