--- a/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
+++ b/src/ZeroTrustOAuth.AppHost/ZeroTrustOAuth.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Aspire.AppHost.Sdk/13.1.0-preview.1.25572.6">
+<Project Sdk="Aspire.AppHost.Sdk/13.1.0-preview.1.25574.12">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <UserSecretsId>a59ae261-d2dd-4d64-b476-887398eaa756</UserSecretsId>
@@ -9,6 +9,7 @@
         <PackageReference Include="Aspire.Hosting.Keycloak"/>
         <PackageReference Include="Aspire.Hosting.PostgreSQL"/>
         <PackageReference Include="Aspire.Hosting.Yarp"/>
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.Keycloak.Extensions"/>
         <PackageReference Include="Scalar.Aspire"/>
     </ItemGroup>
 
