--- a/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
+++ b/src/ZeroTrustOAuth.Inventory/ZeroTrustOAuth.Inventory.csproj
@@ -6,18 +6,24 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Ardalis.GuardClauses"/>
+        <PackageReference Include="Ardalis.Result.AspNetCore"/>
+        <PackageReference Include="Ardalis.Result.FluentValidation"/>
+        <PackageReference Include="Asp.Versioning.Http"/>
         <PackageReference Include="Aspire.Keycloak.Authentication"/>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL"/>
-        <PackageReference Include="ErrorOr"/>
-        <PackageReference Include="FastEndpoints"/>
+        <PackageReference Include="Ardalis.Result"/>
         <PackageReference Include="Facet"/>
         <PackageReference Include="Facet.Extensions"/>
         <PackageReference Include="Facet.Extensions.EFCore"/>
-        <PackageReference Include="FastEndpoints.Swagger"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design"/>
+        <PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
     </ItemGroup>
 
