--- a/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
+++ b/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
@@ -2,9 +2,10 @@
 
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
-    </ItemGroup>
-
     <ItemGroup>
+      <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+      <PackageReference Include="Aspire.Keycloak.Authentication"/>
+    </ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     </ItemGroup>
 
