--- a/src/ZeroTrustOAuth.Inventory/appsettings.json
+++ b/src/ZeroTrustOAuth.Inventory/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Security": {
+    "AuthFlow": "JwtPropagation"
+  },
   "AllowedHosts": "*"
 }
