--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,13 +11,13 @@
         <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 
-        <NoWarn>$(NoWarn};CS8669</NoWarn>
+        <NoWarn>$(NoWarn);CS8669</NoWarn>
         <InterceptorsNamespaces>$(InterceptorsNamespaces);Microsoft.AspNetCore.OpenApi.Generated</InterceptorsNamespaces>
         <OpenApiDocumentsDirectory>.</OpenApiDocumentsDirectory>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="JetBrains.Annotations"/>
-        <Using Include="JetBrains.Annotations"/>
+        <PackageReference Include="JetBrains.Annotations" />
+        <Using Include="JetBrains.Annotations" />
     </ItemGroup>
 </Project>
