--- a/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
+++ b/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
@@ -3,6 +3,9 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Aspire.Keycloak.Authentication" />
+    <PackageReference Include="Duende.AccessTokenManagement" />
+    <PackageReference Include="Duende.AspNetCore.Authentication.OAuth2Introspection" />
+    <PackageReference Include="Duende.IdentityModel.OidcClient" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
 
