Add Duende.AspNetCore.Authentication.OAuth2Introspection package reference

--- a/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
+++ b/src/ZeroTrustOAuth.Auth/ZeroTrustOAuth.Auth.csproj
@@ -4,6 +4,7 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Aspire.Keycloak.Authentication" />
     <PackageReference Include="Duende.AccessTokenManagement" />
+    <PackageReference Include="Duende.AspNetCore.Authentication.OAuth2Introspection" />
     <PackageReference Include="Duende.IdentityModel" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
